@@ -68,6 +68,7 @@ do { my $x = {
        'runtime' => {
                       'requires' => {
                                       'Dist::Zilla::Role::PrereqSource' => '0',
+                                      'Dist::Zilla::Util::ConfigDumper' => '0',
                                       'Moose' => '0',
                                       'MooseX::Types::Moose' => '0',
                                       'perl' => '5.008',
