@@ -3,7 +3,8 @@ Release history for Dist-Zilla-Plugin-Prereqs-SyncVersions
 0.002002 2014-08-16T20:20:09Z
  [Dependencies::Stats]
  - Dependencies changed since 0.002001, see misc/*.deps* for details
- - develop: +1
+ - develop: +2 (suggests: ↑1)
+ - test: (recommends: ↑1)
 
 0.002001 2014-08-16T20:14:31Z
  [00 Trivial]
